Bug fixer et on peut ajouter plusieurs admin

--- a/templates/admin/admin_dashboard.html.twig
+++ b/templates/admin/admin_dashboard.html.twig
@@ -90,6 +90,7 @@
     <ul>
         <li><a href="{{ path('admin_utilisateurs') }}">Gérer les utilisateurs</a></li>
         <li><a href="{{ path('admin_offres') }}">Gérer les offres</a></li>
+        <li><a href="{{ path('admin_locations') }}">Gérer les locations</a></li>  <!-- Bouton ajouté -->
     </ul>
 
     <!-- Bouton de déconnexion -->
