--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -220,6 +220,7 @@
         <script src="{{ asset('assets/js/custom.js') }}"></script>
 
         {% block javascripts %}{% endblock %}
+            {% block importmap %}{{ importmap('app') }}{% endblock %}
     </body>
 </html>
 
