--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,12 +53,12 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
                             <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-                                <li class="scroll active"><a href="#home">home</a></li>
-                                <li class="scroll"><a href="#service">service</a></li>
+                                <li class="scroll active"><a href="#home">Accueil</a></li>
+                                <li class="scroll"><a href="#service">Services</a></li>
                                 <li class="scroll"><a href="#voitures">Voitures</a></li>
                                 <li class="scroll"><a href="#deposer-offre">Déposer un offre</a></li>
-                                <li class="scroll"><a href="#brand">brands</a></li>
-                                <li class="scroll"><a href="#contact">contact</a></li>
+                                <li class="scroll"><a href="#brand">Brands</a></li>
+                                <li class="scroll"><a href="#contact">Contact</a></li>
 
                               {# Boutons Connexion / Inscription / Déconnexion #}
 				{% if app.user %}
@@ -109,15 +109,15 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="single-footer-widget">
                                 <div class="footer-logo">
-                                    <a href="{{ path('homepage') }}">prékar</a>
+                                    <a href="{{ path('homepage') }}">Prékar - Location de voitures</a>
                                 </div>
                                 <p>
-                                    Ased do eiusm tempor incidi ut labore et dolore magnaian aliqua. 
-                                    Ut enim ad minim veniam.
+                                    Louez une voiture facilement et à prix abordable. Profitez d'un large choix de véhicules adaptés à vos besoins,
+                                    que ce soit pour un voyage, un déplacement professionnel ou une aventure en famille.
                                 </p>
                                 <div class="footer-contact">
-                                    <p>info@themesine.com</p>
-                                    <p>+1 (885) 2563154554</p>
+                                    <p><a href="mailto:contact@prekar-location.com" color=white>📧 Notre E-mail</a></p>
+                                    <p><a href="tel:+33745447855" color=white>📞 +33 7 45 44 78 55</a></p>
                                 </div>
                             </div>
                         </div>
@@ -183,31 +183,31 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <p>
-                                &copy; copyright.designed and developed by 
-                                <a href="https://www.themesine.com/">themesine</a>.
+                                &copy; 2025 developed by
+                                <a href="https://www.lespilotesconnectes.com/">Les pilotes connectés</a>.
                             </p>
                         </div>
                         <div class="col-sm-6">
                             <div class="footer-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>	
+                                <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-instagram"></i></a>
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                                <a href="#"><i class="fa fa-behance"></i></a>	
+                                <a href="#"><i class="fa fa-behance"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div id="scroll-Top">
                 <div class="return-to-top">
-                    <i class="fa fa-angle-up" id="scroll-top" data-toggle="tooltip" 
-                       data-placement="top" title="" 
+                    <i class="fa fa-angle-up" id="scroll-top" data-toggle="tooltip"
+                       data-placement="top" title=""
                        data-original-title="Back to Top" aria-hidden="true"></i>
                 </div>
             </div>
         </footer>
+
         <!-- ==================== END FOOTER ==================== -->
 
         <!-- JS SCRIPTS COMMUNS -->
