--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -365,7 +365,8 @@
                                 <i class="flaticon-car"></i>
                             </div>
                             <h2>Mes offres</h2>
-                            <p>Voir ici toutes mes offres déposées.</p>
+                            <p>Boostez votre visibilité dès maintenant !</p>
+
                         </div>
                     </a>
                 </div>
@@ -376,7 +377,7 @@
                                 <i class="flaticon-car-repair"></i>
                             </div>
                             <h2>Ajouter mon permis</h2>
-                            <p>Téléversez une photo ou un scan de votre permis de conduire pour valider votre réservation en toute simplicité.</p>
+                            <p>Valider votre réservation en toute simplicité.</p>
                         </div>
                     </a>
                 </div>
