--- a/public/assets/css/flaticon.css
+++ b/public/assets/css/flaticon.css
@@ -1,15 +1,16 @@
-	/*
+/*
   	Flaticon icon font: Flaticon
   	Creation date: 23/05/2018 10:29
-  	*/
+  	Updated: 27/03/2025 for PRÉKAR project
+*/
 
 @font-face {
   font-family: "Flaticon";
   src: url("../fonts/Flaticon.eot");
   src: url("../fonts/Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/Flaticon.woff") format("woff"),
-       url("../fonts/Flaticon.ttf") format("truetype"),
-       url("../fonts/Flaticon.svg#Flaticon") format("svg");
+  url("../fonts/Flaticon.woff") format("woff"),
+  url("../fonts/Flaticon.ttf") format("truetype"),
+  url("../fonts/Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -22,14 +23,17 @@
 }
 
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
-[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
+[class^="flaticon-"]:after, [class*=" flaticon-"]:after {
   font-family: Flaticon;
   font-size: 20px;
   font-style: normal;
   margin-left: 0px;
+  margin-right: 5px;
+  vertical-align: middle;
 }
 
 .flaticon-car-1:before { content: "\f100"; }
 .flaticon-car-repair:before { content: "\f101"; }
 .flaticon-car:before { content: "\f102"; }
 .flaticon-arrow-down-angle:before { content: "\f103"; }
+.flaticon-permis:before { content: "\f104"; }
